--- a/djangocms_references/templates/djangocms_references/references.html
+++ b/djangocms_references/templates/djangocms_references/references.html
@@ -30,12 +30,15 @@
         <table id="result_list">
           <thead>
             <tr>
-              <th colspan="3"><strong>{% trans "Related objects" %}</strong></th>
+              <th colspan="{{ additional_attrs|length|add:3 }}"><strong>{% trans "Related objects" %}</strong></th>
             </tr>
             <tr>
               <th>{% trans "Title" %}</th>
               <th>{% trans "URL" %}</th>
               <th>{% trans "Content Type" %}</th>
+              {% for attr in additional_attrs %}
+              <th>{{ attr }}</th>
+              {% endfor %}
             </tr>
           </thead>
           <tbody>
@@ -47,11 +50,14 @@
                 <a href="{% object_preview_url obj %}">{% object_preview_url obj %}</a>
               </td>
               <td>{% object_model obj %}</td>
+              {% for attr in obj.additional_attrs %}
+              <td>{{ attr|default_if_none:"-" }}</td>
+              {% endfor %}
             </tr>
             {% endfor %}
           {% empty %}
             <tr>
-              <td colspan="3">{% trans "There are no related objects" %}</td>
+              <td colspan="{{ additional_attrs|length|add:3 }}">{% trans "There are no related objects" %}</td>
             </tr>
           {% endfor %}
           </tbody>
