--- a/djangocms_references/templates/djangocms_references/references.html
+++ b/djangocms_references/templates/djangocms_references/references.html
@@ -37,7 +37,7 @@
               <th>{% trans "URL" %}</th>
               <th>{% trans "Content Type" %}</th>
               {% for column in extra_columns %}
-              <th>{{ column }}</th>
+              <th>{{ column.verbose_name }}</th>
               {% endfor %}
             </tr>
           </thead>
@@ -50,7 +50,7 @@
                 <a href="{% object_preview_url obj %}">{% object_preview_url obj %}</a>
               </td>
               <td>{% object_model obj %}</td>
-              {% for column in obj.extra_columns %}
+              {% for column in extra_columns %}
               <td>{% extra_column obj column %}</td>
               {% endfor %}
             </tr>
