--- a/djangocms_references/templates/djangocms_references/references.html
+++ b/djangocms_references/templates/djangocms_references/references.html
@@ -30,12 +30,15 @@
         <table id="result_list">
           <thead>
             <tr>
-              <th colspan="3"><strong>{% trans "Related objects" %}</strong></th>
+              <th colspan="{{ extra_columns|length|add:3 }}"><strong>{% trans "Related objects" %}</strong></th>
             </tr>
             <tr>
               <th>{% trans "Title" %}</th>
               <th>{% trans "URL" %}</th>
               <th>{% trans "Content Type" %}</th>
+              {% for column in extra_columns %}
+              <th>{{ column.verbose_name }}</th>
+              {% endfor %}
             </tr>
           </thead>
           <tbody>
@@ -47,11 +50,14 @@
                 <a href="{% object_preview_url obj %}">{% object_preview_url obj %}</a>
               </td>
               <td>{% object_model obj %}</td>
+              {% for column in extra_columns %}
+              <td>{% extra_column obj column %}</td>
+              {% endfor %}
             </tr>
             {% endfor %}
           {% empty %}
             <tr>
-              <td colspan="3">{% trans "There are no related objects" %}</td>
+              <td colspan="{{ extra_columns|length|add:3 }}">{% trans "There are no related objects" %}</td>
             </tr>
           {% endfor %}
           </tbody>
