--- a/djangocms_references/templates/djangocms_references/unpublish_dependencies.html
+++ b/djangocms_references/templates/djangocms_references/unpublish_dependencies.html
@@ -1,10 +1,43 @@
+{% load i18n djangocms_references_tags %}
 <div>
-    The following objects have relationships with the object you're about to unpublish:
-    <ul>
-    {% for queryset in references %}
-        {% for object in queryset %}
-        <li>{{ object }}</li>
+    <table>
+      <thead>
+        <tr>
+          <th colspan="{{ extra_columns|length|add:3 }}"><strong>{% trans "Related objects" %}</strong></th>
+        </tr>
+      {% if not references %}
+      </thead>
+      <tbody>
+        <tr>
+          <th>{% trans "No related objects" %}</th>
+        </tr>
+      </tbody>
+      {% else %}
+        <tr>
+          <th>{% trans "Title" %}</th>
+          <th>{% trans "URL" %}</th>
+          <th>{% trans "Content Type" %}</th>
+          {% for column in extra_columns %}
+          <th>{{ column.verbose_name }}</th>
+          {% endfor %}
+        </tr>
+      </thead>
+      <tbody>
+      {% for queryset in references %}
+        {% for obj in queryset %}
+        <tr>
+          <td>{{ obj }}</td>
+          <td>
+            <a href="{% object_preview_url obj %}">{% object_preview_url obj %}</a>
+          </td>
+          <td>{% object_model obj %}</td>
+          {% for column in extra_columns %}
+          <td>{% extra_column obj column %}</td>
+          {% endfor %}
+        </tr>
         {% endfor %}
-    {% endfor %}
-    </ul>
+      {% endfor %}
+      </tbody>
+      {% endif %}
+    </table>
 </div>
