Updated helper function to filter by state

--- a/djangocms_references/templates/djangocms_references/references.html
+++ b/djangocms_references/templates/djangocms_references/references.html
@@ -30,7 +30,7 @@
               {% else %}
                 <li>
               {% endif %}
-              <a href="?state={{ val }}" title="{% trans  val  %}">{% trans val %}</a>
+              <a href="?state={{ key }}" title="{% trans  val  %}">{% trans val %}</a>
             </li>
           {% endfor %}
       </ul>
