Fix incorrect config and template directories

--- a/djangocms_references/templates/djangocms_versioning_filer/admin/action_buttons/show_references.html
+++ b/djangocms_references/templates/djangocms_versioning_filer/admin/action_buttons/show_references.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load i18n djangocms_references_tags %}
 
 {% get_versioning_filer_references_url file as references_url %}
 <a href="{{ references_url }}"
