--- a/djangocms_references/templates/djangocms_references/references_table.html
+++ b/djangocms_references/templates/djangocms_references/references_table.html
@@ -20,7 +20,7 @@
         <tr>
           <td>{{ obj }}</td>
           <td>
-            <a href="{% object_preview_url obj %}">{% object_preview_url obj %}</a>
+            <a class="js-djangocms-references-close-sideframe" href="{% object_preview_url obj %}">{% object_preview_url obj %}</a>
           </td>
           <td>{% object_model obj %}</td>
           {% for column in extra_columns %}
