fix: URL of `show references` in action list of djangocms-versioning-filer list page

--- a/djangocms_references/templates/djangocms_versioning_filer/admin/action_buttons/show_references.html
+++ b/djangocms_references/templates/djangocms_versioning_filer/admin/action_buttons/show_references.html
@@ -2,4 +2,4 @@
 
 {% get_versioning_filer_references_url file as references_url %}
 <a href="{{ references_url }}"
-    title="{% blocktrans %}Show references{% endblocktrans %}" class="action-button"><span class="fa fa-code-fork"></span></a>
+    title="{% blocktrans %}Show references{% endblocktrans %}" class="action-button cms-form-get-method"><span class="fa fa-code-fork"></span></a>
